[gd_scene load_steps=3 format=2]

[ext_resource path="res://MiniGame01/MiniGame01.gd" type="Script" id=1]
[ext_resource path="res://MiniGame01/Background/Background.tscn" type="PackedScene" id=2]

[node name="MiniGame01" type="Node"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="Background2" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 1920, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Background3" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 3840, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Background4" parent="." index="3" instance=ExtResource( 2 )]

position = Vector2( 5760, 0 )
_sections_unfolded = [ "Transform" ]


